--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "plasticbrain/php-flash-messages": "^1.0",
-        "phpoffice/phpspreadsheet": "^1.5"
+        "phpoffice/phpspreadsheet": "^1.5",
+        "senhung/config-read-write": "^2.0"
     }
 }
